# script-executor

./: Cargo.toml  config.json  scriptexec.service  test.sh
src/: main.rs
static/: index.html
