[package]
name = "script-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
branca = "0.10.0"
hex = "0.4.3"
rand = "0.8.5"
chrono = "0.4.24"
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4.17"
tokio-stream = "0.1.14"
actix-cors = "0.6.4"
sha2 = "0.10.6"
base64 = "0.21.0"
